--- a/src/Soenneker.Dtos.ModelBuilderConfig.csproj
+++ b/src/Soenneker.Dtos.ModelBuilderConfig.csproj
@@ -14,7 +14,7 @@
         <AssemblyName>Soenneker.Dtos.ModelBuilderConfig</AssemblyName>
         <PackageId>Soenneker.Dtos.ModelBuilderConfig</PackageId>
         <PackageTags>dtos modelbuilderconfig machine learning mlnet ml dto model builder mbconfig object csharp dotnet c# .net</PackageTags>
-        <Copyright>Copyright © 2025 Jake Soenneker</Copyright>
+        <Copyright>Copyright © 2025-2026 Jake Soenneker</Copyright>
         <Authors>Jake Soenneker</Authors>
         <Company>https://soenneker.com</Company>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
